--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.3",
+    "@reduxjs/toolkit": "^2.2.1",
     "@types/react-transition-group": "^4.4.10",
     "classnames": "^2.5.1",
     "framer-motion": "^11.0.6",
@@ -18,13 +19,16 @@
     "react-dom": "^18.2.0",
     "react-formik": "^0.1.5",
     "react-lazyload": "^3.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
     "react-slick": "^0.30.2",
     "react-swipeable": "^7.0.1",
     "react-transition-group": "^4.4.5",
+    "redux": "^5.0.1",
     "sass": "^1.70.0",
     "styled-components": "^6.1.8",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
