--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-formik": "^0.1.5",
     "react-lazyload": "^3.2.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.22.2",
     "react-slick": "^0.30.2",
     "react-swipeable": "^7.0.1",
