--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-lazyload": "^3.2.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.22.2",
+    "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
     "react-swipeable": "^7.0.1",
     "react-transition-group": "^4.4.5",
