--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-formik": "^0.1.5",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-lazyload": "^3.2.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.22.2",
