--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-spring/web": "^9.7.3",
     "@types/react-transition-group": "^4.4.10",
+    "axios": "^1.6.8",
     "classnames": "^2.5.1",
     "framer-motion": "^11.0.6",
     "react": "^18.2.0",
