--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@types/react-transition-group": "^4.4.10",
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
+    "formik": "^2.4.5",
     "framer-motion": "^11.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-formik": "^0.1.5",
+    "react-hook-form": "^7.51.2",
     "react-lazy-load-image-component": "^1.6.0",
     "react-lazyload": "^3.2.0",
     "react-responsive": "^9.0.2",
