--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-formik": "^0.1.5",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.51.2",
     "react-lazy-load-image-component": "^1.6.0",
     "react-lazyload": "^3.2.0",
